snapshots/care/data4life/hc-result-sdk-kmp/error/maven-metadata.xml.sha1
9115622b3ba150bb695b6b3ca3f5e8a6a703e85b